<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_user_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.therishka.androidlab5.ChangeUserDataActivity">

    <include layout="@layout/toolbar_standart"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/user_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_input"/>

        <EditText
            android:id="@+id/user_surname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_surname_input"/>

        <EditText
            android:id="@+id/user_age_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_age_input"
            android:inputType="number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/UserDataHintTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/user_sex_input"/>

            <RadioGroup
                android:id="@+id/user_sex_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/user_sex_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/user_male"/>

                <RadioButton
                    android:id="@+id/user_sex_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/user_female"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            android:padding="12dp">

            <Button
                style="?android:buttonBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelBtnPressed"
                android:text="@string/cancel"/>

            <Button
                style="?android:buttonBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="confirmBtnPressed"
                android:text="@string/confirm"/>
        </LinearLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:visibility="gone"/>


    </LinearLayout>

</LinearLayout>
