<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/root_view"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbar_standart"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            style="@style/UserDataHintTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"/>

        <TextView
            android:id="@+id/user_data_name"
            style="@style/UserDataHintTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            style="@style/UserDataHintTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_surname"/>

        <TextView
            android:id="@+id/user_data_surname"
            style="@style/UserDataHintTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            style="@style/UserDataHintTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_age"/>

        <TextView
            android:id="@+id/user_data_age"
            style="@style/UserDataHintTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            style="@style/UserDataHintTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_sex"/>

        <TextView
            android:id="@+id/user_data_sex"
            style="@style/UserDataHintTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/change_user_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="changeUserDataBtnClick"
        android:padding="16dp"
        android:text="@string/user_data_change_activity_title"/>

</LinearLayout>